Adding GH Actions + Badge + Makefile

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,8 @@
+---
+output: github_document
+---
 
 [![R-CMD-check](https://github.com/UofUEpi/pcoriRpackage/actions/workflows/r.yml/badge.svg)](https://github.com/UofUEpi/pcoriRpackage/actions/workflows/r.yml)
 
 # pcoriRPackage
-
 R Package for PCORI project
