--- a/README.Rmd
+++ b/README.Rmd
@@ -6,21 +6,24 @@ output: github_document
 
 
 
-# pcoriRPackage
+# SensIAT
 
-R Package for PCORI project.
+R Package for sensitivity analysis with irregular assessment times.
 
 
 
 ## Setup
 
 Installation of required dependencies:
+
 ```R
 install.packages(c( "assertthat", "dplyr", "orthogonalsplinebasis", "pracma", "purrr", "Rcpp", "rlang", "roxygen2", "tibble", "tidyr" ))
 ```
-On Windows, you will also need [RTools](https://cran.r-project.org/bin/windows/Rtools/).
+
+On Windows, you will also need [`RTools`](https://cran.r-project.org/bin/windows/Rtools/).
 
 To build and install, from the project root directory, do:
+
 ```sh
 R CMD INSTALL .
 ```
