--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ output: github_document
 
 R Package for sensitivity analysis with irregular assessment times.
 
-
+A link to the paper describing the methodology can be found [here](https://arxiv.org/abs/2204.11979).
 
 ## Installation
 
